# vega

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.cn.md  README.md  RELEASE.md  Third_Party_Open_Source_Notice  setup.py
benchmark/: run_benchmark.py
benchmark/algs/: adelaide_ea.yml  bohb.yml  boss.yml  cars.yml  cyclesr.yml  esr_ea.yml  fmd.yml  jdd_ea.yml  pba.yml  prune_ea.yml  quant_ea.yml  sp_nas.yml  spnet_fpn.py  sr_ea.yml
deploy/: deploy.yml  deploy_local_cluster.py  install_dependencies.sh  start_slave_worker.py  verify_local_cluster.py
docs/: benchmark.md  model_zoo.md
evaluate_service/: LICENSE  MANIFEST.in  README.cn.md  README.md  RELEASE.md  class_factory.py  config.py  env_atlas300.sh  evaluate_service.py  install.sh  install_dependencies.sh  main.py  run.sh  setup.py
evaluate_service/evaluate_service/: __init__.py  class_factory.py  main.py  run_flask.py
evaluate_service/hardwares/: __init__.py
evaluate_service/hardwares/davinci/samples/atlas200dk/src/: CMakeLists.txt  classify_net_host.cpp  data_recv.cpp  sample_data.cpp  util.cpp
evaluate_service/samples/atlas300/src/: CMakeLists.txt  main.cpp  model_process.cpp  sample_process.cpp
evaluate_service/tools/: compare_result.py  data_convert.py  inference_caffe_cpu.py  inference_onnx_cpu.py  inference_tf_cpu.py
evaluate_service/utils/: caffe2bolt.sh  caffe2om.sh  get_latency_from_log.sh  inference_bolt.sh  inference_davinci.sh  onnx2bolt.sh  run_model_single_input  tf2om.sh  tflite2bolt.sh
examples/: README.en.md  README.md  run_all_evals.sh  run_eval.sh  run_example.py  run_pipeline.py
examples/classification/: classification.yml  classify.yml
examples/developer/: train.py
examples/nlp/: bert.yml  bert_md.yml  tiny_bert.yml
examples/prediction/: temporal_spatial.yml
vega/: __init__.py
vega/algorithms/: __init__.py
vega/common/: __init__.py  arg_parser.py  backend_register.py  check.py  class_factory.py  config.py  config_serializable.py  consts.py  dag.py  file_ops.py  general.py  json_coder.py  message_client.py  message_server.py  parameter_sharing.py  pareto_front.py  searchable.py  task_ops.py  user_config.py  utils.py  utils_torch.py  wrappers.py  zmq_op.py
vega/config/: __init__.py
vega/core/: __init__.py  backend_register.py  run.py
vega/datasets/: __init__.py
vega/evaluator/: __init__.py  conf.py  custom.py  device_evaluator.py  evaluator.py  host_evaluator.py  utils.py
vega/metrics/: __init__.py  flops_and_params.py  forward_latency.py  runtime_estimate.py
vega/model_zoo/: __init__.py  fusion.py  inference.py  model_zoo.py  torch_vision_model.py  tuner.py  weights_tools.py
vega/modules/: __init__.py  get_module_class.py  graph_utils.py  module.py  nodes.py
vega/networks/: __init__.py  adelaide.py  bert.py  decaug.py  dnet.py  erdb_esr.py  faster_backbone.py  faster_rcnn.py  gcn.py  mobilenet.py  mobilenetv3.py  model_config.py  mtm_sr.py  necks.py  network_desc.py  quant.py  resnet.py  resnet_det.py  resnet_general.py  resnext_det.py  sgas_network.py  simple_cnn.py  spnet_backbone.py  super_network.py  text_cnn.py  unet.py  vit.py
vega/op_search/: automl_zero.py  generate_data.py  main.py  mish.py  ops.py  (+3 more)
zeus/: __init__.py  tf_utils.py  trainer_api.py  trainer_base.py  trainer_ms.py  trainer_tf.py  trainer_torch.py
(+1892 files in other folders)
